--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite-plugin-ts-to-mdx",
+  "name": "vite-plugin-packages",
   "private": true,
   "version": "1.0.0",
   "description": "",
