--- a/packages/vite-plugin-mdx/package.json
+++ b/packages/vite-plugin-mdx/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite-plugin-ts-to-mdx",
+  "name": "vite-plugin-mdx",
   "version": "1.0.0",
   "description": "",
   "main": "dist/index.mjs",
@@ -19,5 +19,15 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@mdx-js/mdx": "^3.0.1",
+    "esbuild": "^0.20.2",
+    "resolve": "^1.22.8",
+    "unified": "^11.0.4"
+  },
+  "devDependencies": {
+    "@types/node": "^20.12.7",
+    "@types/resolve": "^1.20.6"
+  }
 }
